# WayQuick

./: Cargo.toml  README.md  flake.nix
src/: app.rs  launcher.rs  lib.rs  linux_module.rs  main.rs  quickapp.rs  web_server.rs  windows_module.rs
themes/: catppuccin.json
